# transcribeupl

./: .gitignore  Cargo.toml
src/: app.rs  archive.rs  audio.rs  config.rs  main.rs  pedal.rs  ui_time.rs  util.rs
