[package]
name = "transcribeupl"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = { version = "0.23", default-features = true, features = ["glow"] }
egui = "0.23"

# Audio output
rodio = "0.17"

# Input (foot pedal)
evdev = "0.12"

# Decoding (pure Rust)
symphonia = { version = "0.5", features = ["mp3", "wav", "ogg", "pcm"] }
# Opus plugin from upstream; use master branch or pin to a specific commit via `rev`.
symphonia-codec-opus = { git = "https://github.com/pdeljanov/Symphonia", package = "symphonia-codec-opus", branch = "master" }

# Native file dialog
rfd = "0.14"

# Config + logging
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# Time/date
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Utilities
anyhow = "1.0"
parking_lot = "0.12"
